--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,13 @@ python-dotenv
 fastapi 
 uvicorn 
 pydantic
-requests
 psycopg2-binary
+langchain-community
+langchain-openai
+langchain-chroma
+langchain
+langchain-core
+chromadb
+pypdf
+cryptography==41.0.2
+python-multipart
