--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ openai
 streamlit
 python-dotenv
 fastapi 
-uvicorn 
+uvicorn
 pydantic
 psycopg2-binary
 langchain-community
@@ -14,3 +14,5 @@ chromadb
 pypdf
 cryptography==41.0.2
 python-multipart
+azure-core==1.32.0
+azure-storage-blob==12.24.0
