--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -39,11 +39,11 @@ jobs:
 
     - name: Azure VM Update
       run: |
-       az vm extension set \
-         --resource-group ${{ secrets.RESOURCE_GROUP }} \
-         --vm-name ${{ secrets.VM_NAME }} \
-         --name CustomScript \
-         --force-update \
-         --publisher Microsoft.Azure.Extensions \
-         --settings '{"fileUris": []}' \
-         --protected-settings @.github/azure-settings.json
+        az vm extension set \
+          --resource-group ${{ secrets.RESOURCE_GROUP }} \
+          --vm-name ${{ secrets.VM_NAME }} \
+          --name CustomScript \
+          --force-update \
+          --publisher Microsoft.Azure.Extensions \
+          --settings '{"fileUris": []}' \
+          --protected-settings '{"commandToExecute": "sudo -u azureuser bash /home/azureuser/capstone_project/update_app.sh"}'
