--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -41,10 +41,10 @@ jobs:
     - name: Azure VM Update
       run: |
         az vm extension set \
-          --resource-group ${{ secrets.RESOURCE_GROUP }} \
-          --vm-name ${{ secrets.VM_NAME }} \
-          --name CustomScript \
-          --force-update \
-          --publisher Microsoft.Azure.Extensions \
-          --settings '{"fileUris": []}' \
-          --protected-settings '{"commandToExecute": "export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/capstone_project/update_app.sh"}'
+            --resource-group ${{ secrets.RESOURCE_GROUP }} \
+            --vm-name ${{ secrets.VM_NAME }} \
+            --name CustomScript \
+            --force-update \
+            --publisher Microsoft.Azure.Extensions \
+            --settings '{"fileUris": []}' \
+            --protected-settings @protected_settings.json
