--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -39,13 +39,14 @@ jobs:
     
 
     # Update the VM with secure token passing
-    - name: Azure VMss Update
+    - name: Azure VMSS Update
       run: |
-       az vm extension set \
+       az vmss extension set \
         --resource-group ${{ secrets.RESOURCE_GROUP }} \
-        --vm-name ${{ secrets.VM_NAME }} \
+        --vmss-name ${{ secrets.VM_NAME }} \
         --name CustomScript \
         --force-update \
         --publisher Microsoft.Azure.Extensions \
+        --type-handler-version 2.1 \
         --settings '{"fileUris": []}' \
         --protected-settings @.github/azure-settings.json
