--- a/.github/workflows/stage6deploy.yml
+++ b/.github/workflows/stage6deploy.yml
@@ -47,6 +47,6 @@ jobs:
         --name CustomScript \
         --force-update \
         --publisher Microsoft.Azure.Extensions \
-        --type-handler-version 2.1 \
+        --version 2.1 \
         --settings '{"fileUris": []}' \
         --protected-settings @.github/azure-settings.json
